WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94880
[EFL] Cancel mark on search field is not displayed
https://bugs.webkit.org/show_bug.cgi?id=94880
Summary
[EFL] Cancel mark on search field is not displayed
KwangYong Choi
Reported
2012-08-23 17:30:25 PDT
fast/forms/search-cancel-button-style-sharing.html fast/forms/search-rtl.html Cancel mark in search field is not displayed.
Attachments
Patch
(76.16 KB, patch)
2013-03-15 01:19 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch for landing
(76.12 KB, patch)
2013-03-18 03:00 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2013-03-15 01:19:42 PDT
Created
attachment 193256
[details]
Patch
Gyuyoung Kim
Comment 2
2013-03-17 19:26:32 PDT
CC'ing Laszlo and Chris, could you guys take a look this ?
Chris Dumez
Comment 3
2013-03-17 23:46:56 PDT
Comment on
attachment 193256
[details]
Patch LGTM.
WebKit Review Bot
Comment 4
2013-03-18 02:22:18 PDT
Comment on
attachment 193256
[details]
Patch Rejecting
attachment 193256
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=gce-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 193256, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: -- saving rejects to file LayoutTests/platform/efl/fast/forms/search-cancel-button-style-sharing-expected.txt.rej patching file LayoutTests/platform/efl/fast/forms/search-rtl-expected.txt Hunk #1 FAILED at 19. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/efl/fast/forms/search-rtl-expected.txt.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', '--force', '--reviewer', 'Kenneth Rohde Christiansen']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://webkit-commit-queue.appspot.com/results/17236074
Gyuyoung Kim
Comment 5
2013-03-18 03:00:12 PDT
Created
attachment 193511
[details]
Patch for landing
Gyuyoung Kim
Comment 6
2013-03-18 03:15:40 PDT
Comment on
attachment 193511
[details]
Patch for landing Clearing flags on attachment: 193511 Committed
r146050
: <
http://trac.webkit.org/changeset/146050
>
Gyuyoung Kim
Comment 7
2013-03-18 03:15:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug