[EFL] Cancel mark on search field is not displayed https://bugs.webkit.org/show_bug.cgi?id=94880

Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

adjustSearchFieldCancelButtonStyle() doesn't set style width and height for search cancel button.
So, the button isn't showing up in search input field. Besides the button size should be scaled based
on the font size as chromium, qt, and blackberry ports.

Tests: fast/forms/search-cancel-button-style-sharing.html
       fast/forms/search-rtl.html

* platform/efl/RenderThemeEfl.cpp:
(WebCore):
(WebCore::RenderThemeEfl::adjustSearchFieldCancelButtonStyle):

LayoutTests:

Rebaseline expected results related to search cancel button.

* platform/efl-wk1/TestExpectations: These tests don't work with WK1 pixel test yet.
* platform/efl/TestExpectations:
* platform/efl/fast/forms/search-cancel-button-style-sharing-expected.png:
* platform/efl/fast/forms/search-cancel-button-style-sharing-expected.txt:
* platform/efl/fast/forms/search-rtl-expected.png:
* platform/efl/fast/forms/search-rtl-expected.txt:

Canonical link: https://commits.webkit.org/130862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146050 268f45cc-cd09-0410-ab3c-d52691b4dbfc